[package]

name = "RustyBrowser"

version = "0.1.0"

edition = "2021"

[dependencies]

# Core

tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.11", features = ["json"] }

html5ever = "0.26.0"

cssparser = "0.29"

log = "0.4"

env_logger = "0.9"

ureq = "3.0.12"

url = "2"

lazy_static = "1"

sha2 = "0.10"

base64 = "0.21"

# GUI (optional, choose one)

winit = "0.29"

iced = { version = "0.10", optional = true }

druid = { version = "0.8.3", optional = true }

# Rendering

raqote = "0.8"

font-kit = "0.14.3"

ab_glyph = "0.2.29"